try to fix decor-overflow

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -45,7 +45,7 @@
       position: absolute;
       content: '';
       width: 26rem;
-      height: 60vw;
+      height: 50vw;
       bottom: 3rem;
     }
 
